# protobuf-samples

./: CMakeLists.txt  README.md  protobuf-samples.sln  protobufSamples.sln
protobuf-samples/: arena.cpp  baseFeatures.cpp  pch.h  person.pb.cc  person.pb.h  protobuf-samples.vcxproj  protobuf-samples.vcxproj.filters  serialization.cpp  test.cpp
protobuf-samples/generated-files/: check-oneof.pb.cc  check-oneof.pb.h  person.pb.cc  person.pb.h
protobuf-samples/protos/: check-oneof.proto  person.proto
protobufSamples/: protobufSamples.vcxproj  protobufSamples.vcxproj.filters
